--- a/environment.yml
+++ b/environment.yml
@@ -3,134 +3,134 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - anyio=3.3.0=py39h6e9494a_0
-  - appnope=0.1.2=py39h6e9494a_1
-  - argon2-cffi=20.1.0=py39h89e85a6_2
-  - async_generator=1.10=py_0
-  - attrs=21.2.0=pyhd8ed1ab_0
-  - babel=2.9.1=pyh44b312d_0
-  - backcall=0.2.0=pyh9f0ad1d_0
-  - backports=1.0=py_2
-  - backports.functools_lru_cache=1.6.4=pyhd8ed1ab_0
-  - blas=1.0=mkl
-  - bleach=4.1.0=pyhd8ed1ab_0
-  - brotli=1.0.9=hb1e8313_2
-  - brotlipy=0.7.0=py39h89e85a6_1001
-  - ca-certificates=2021.5.30=h033912b_0
-  - certifi=2021.5.30=py39h6e9494a_0
-  - cffi=1.14.6=py39he338e87_1
-  - chardet=4.0.0=py39h6e9494a_1
-  - charset-normalizer=2.0.0=pyhd8ed1ab_0
-  - cryptography=3.4.7=py39ha2c9959_0
-  - cycler=0.10.0=py39hecd8cb5_0
-  - debugpy=1.4.1=py39h9fcab8e_0
-  - decorator=5.1.0=pyhd8ed1ab_0
-  - defusedxml=0.7.1=pyhd8ed1ab_0
-  - entrypoints=0.3=pyhd8ed1ab_1003
-  - fonttools=4.25.0=pyhd3eb1b0_0
-  - freetype=2.10.4=ha233b18_0
-  - icu=58.1=1
-  - idna=3.1=pyhd3deb0d_0
-  - importlib-metadata=4.8.1=py39h6e9494a_0
-  - intel-openmp=2021.3.0=hecd8cb5_3375
-  - ipykernel=6.4.1=py39h71a6800_0
-  - ipython=7.27.0=py39h71a6800_0
-  - ipython_genutils=0.2.0=py_1
-  - jedi=0.18.0=py39h6e9494a_2
-  - jinja2=3.0.1=pyhd8ed1ab_0
-  - jpeg=9d=h9ed2024_0
-  - json5=0.9.5=pyh9f0ad1d_0
-  - jsonschema=3.2.0=pyhd8ed1ab_3
-  - jupyter_client=7.0.3=pyhd8ed1ab_0
-  - jupyter_core=4.8.1=py39h6e9494a_0
-  - jupyter_server=1.11.0=pyhd8ed1ab_0
-  - jupyterlab=3.1.13=pyhd8ed1ab_0
-  - jupyterlab_pygments=0.1.2=pyh9f0ad1d_0
-  - jupyterlab_server=2.8.1=pyhd8ed1ab_0
-  - kiwisolver=1.3.1=py39h23ab428_0
-  - lcms2=2.12=hf1fd2bf_0
-  - libcxx=12.0.1=habf9029_0
-  - libffi=3.4.2=he49afe7_3
-  - libgfortran=3.0.1=h93005f0_2
-  - libpng=1.6.37=ha441bb4_0
-  - libsodium=1.0.18=hbcb3906_1
-  - libtiff=4.2.0=h87d7836_0
-  - libwebp-base=1.2.0=h9ed2024_0
-  - llvm-openmp=12.0.1=hda6cdc1_1
-  - lz4-c=1.9.3=h23ab428_1
-  - markupsafe=2.0.1=py39h89e85a6_0
-  - matplotlib=3.4.2=py39hecd8cb5_0
-  - matplotlib-base=3.4.2=py39h8b3ea08_0
-  - matplotlib-inline=0.1.3=pyhd8ed1ab_0
-  - mistune=0.8.4=py39h89e85a6_1004
-  - mkl=2021.3.0=hecd8cb5_517
-  - mkl-service=2.4.0=py39h9ed2024_0
-  - mkl_fft=1.3.0=py39h4a7008c_2
-  - mkl_random=1.2.2=py39hb2f4e1b_0
-  - munkres=1.1.4=py_0
-  - nbclassic=0.3.2=pyhd8ed1ab_0
-  - nbclient=0.5.4=pyhd8ed1ab_0
-  - nbconvert=6.1.0=py39h6e9494a_1
-  - nbformat=5.1.3=pyhd8ed1ab_0
-  - ncurses=6.2=h2e338ed_4
-  - nest-asyncio=1.5.1=pyhd8ed1ab_0
-  - notebook=6.4.4=pyha770c72_0
-  - numpy=1.20.3=py39h4b4dc7a_0
-  - numpy-base=1.20.3=py39he0bd621_0
-  - olefile=0.46=pyhd3eb1b0_0
-  - openjpeg=2.4.0=h66ea3da_0
-  - openssl=1.1.1l=h0d85af4_0
-  - packaging=21.0=pyhd8ed1ab_0
-  - pandas=1.3.3=py39h4d6be9b_0
-  - pandoc=2.14.2=h0d85af4_0
-  - pandocfilters=1.5.0=pyhd8ed1ab_0
-  - parso=0.8.2=pyhd8ed1ab_0
-  - patsy=0.5.1=py39hecd8cb5_0
-  - pexpect=4.8.0=pyh9f0ad1d_2
-  - pickleshare=0.7.5=py_1003
-  - pillow=8.3.1=py39ha4cf6ea_0
-  - pip=21.2.4=pyhd8ed1ab_0
-  - prometheus_client=0.11.0=pyhd8ed1ab_0
-  - prompt-toolkit=3.0.20=pyha770c72_0
-  - ptyprocess=0.7.0=pyhd3deb0d_0
-  - pycparser=2.20=pyh9f0ad1d_2
-  - pygments=2.10.0=pyhd8ed1ab_0
-  - pyopenssl=20.0.1=pyhd8ed1ab_0
-  - pyparsing=2.4.7=pyh9f0ad1d_0
-  - pyrsistent=0.17.3=py39h89e85a6_2
-  - pysocks=1.7.1=py39h6e9494a_3
-  - python=3.9.7=h1248fe1_2_cpython
-  - python-dateutil=2.8.2=pyhd8ed1ab_0
-  - python_abi=3.9=2_cp39
-  - pytz=2021.1=pyhd8ed1ab_0
-  - pyzmq=22.3.0=py39h7fec2f1_0
-  - readline=8.1=h05e3726_0
-  - requests=2.26.0=pyhd8ed1ab_0
-  - requests-unixsocket=0.2.0=py_0
-  - scipy=1.7.1=py39h88652d9_2
-  - send2trash=1.8.0=pyhd8ed1ab_0
-  - setuptools=58.0.4=py39h6e9494a_1
-  - six=1.16.0=pyh6c4a22f_0
-  - sniffio=1.2.0=py39h6e9494a_1
-  - sqlite=3.36.0=h23a322b_1
-  - statsmodels=0.12.2=py39h9ed2024_0
-  - terminado=0.12.1=py39h6e9494a_0
-  - testpath=0.5.0=pyhd8ed1ab_0
-  - tk=8.6.11=h5dbffcc_1
-  - tornado=6.1=py39h89e85a6_1
-  - traitlets=5.1.0=pyhd8ed1ab_0
-  - tzdata=2021a=he74cb21_1
-  - urllib3=1.26.7=pyhd8ed1ab_0
-  - wcwidth=0.2.5=pyh9f0ad1d_2
-  - webencodings=0.5.1=py_1
-  - websocket-client=0.57.0=py39h6e9494a_4
-  - wheel=0.37.0=pyhd8ed1ab_1
-  - xz=5.2.5=haf1e3a3_1
-  - zeromq=4.3.4=he49afe7_1
-  - zipp=3.5.0=pyhd8ed1ab_0
-  - zlib=1.2.11=h7795811_1010
-  - zstd=1.4.9=h322a384_0
+  - anyio=3.3.0
+  - argon2-cffi=20.1.0
+  - async_generator=1.10
+  - attrs=21.2.0
+  - babel=2.9.1
+  - backcall=0.2.0
+  - backports=1.0
+  - backports.functools_lru_cache=1.6.4
+  - blas=1.0
+  - bleach=4.1.0
+  - brotli=1.0.9
+  - brotlipy=0.7.0
+  - ca-certificates=2021.5.30
+  - certifi=2021.5.30
+  - cffi=1.14.6
+  - chardet=4.0.0
+  - charset-normalizer=2.0.0
+  - cryptography=3.4.7
+  - cycler=0.10.0
+  - debugpy=1.4.1
+  - decorator=5.1.0
+  - defusedxml=0.7.1
+  - entrypoints=0.3
+  - fonttools=4.25.0
+  - freetype=2.10.4
+  - icu=58.1
+  - idna=3.1
+  - importlib-metadata=4.8.1
+  - intel-openmp=2021.3.0
+  - ipykernel=6.4.1
+  - ipython=7.27.0
+  - ipython_genutils=0.2.0
+  - jedi=0.18.0
+  - jinja2=3.0.1
+  - jpeg=9d
+  - json5=0.9.5
+  - jsonschema=3.2.0
+  - jupyter_client=7.0.3
+  - jupyter_core=4.8.1
+  - jupyter_server=1.11.0
+  - jupyterlab=3.1.13
+  - jupyterlab_pygments=0.1.2
+  - jupyterlab_server=2.8.1
+  - kiwisolver=1.3.1
+  - lcms2=2.12
+  - libcxx=12.0.1
+  - libffi=3.4.2
+  - libpng=1.6.37
+  - libsodium=1.0.18
+  - libtiff=4.2.0
+  - libwebp-base=1.2.0
+  - llvm-openmp=12.0.1
+  - lz4-c=1.9.3
+  - markupsafe=2.0.1
+  - matplotlib=3.4.2
+  - matplotlib-base=3.4.2
+  - matplotlib-inline=0.1.3
+  - mistune=0.8.4
+  - mkl=2021.3.0
+  - mkl-service=2.4.0
+  - mkl_fft=1.3.0
+  - mkl_random=1.2.2
+  - munkres=1.1.4
+  - nbclassic=0.3.2
+  - nbclient=0.5.4
+  - nbconvert=6.1.0
+  - nbformat=5.1.3
+  - ncurses=6.2
+  - nest-asyncio=1.5.1
+  - notebook=6.4.4
+  - numpy=1.20.3
+  - numpy-base=1.20.3
+  - olefile=0.46
+  - openjpeg=2.4.0
+  - openssl=1.1.1l
+  - packaging=21.0
+  - pandas=1.3.3
+  - pandoc=2.14.2
+  - pandocfilters=1.5.0
+  - parso=0.8.2
+  - patsy=0.5.1
+  - pexpect=4.8.0
+  - pickleshare=0.7.5
+  - pillow=8.3.1
+  - pip=21.2.4
+  - prometheus_client=0.11.0
+  - prompt-toolkit=3.0.20
+  - ptyprocess=0.7.0
+  - pycparser=2.20
+  - pygments=2.10.0
+  - pyopenssl=20.0.1
+  - pyparsing=2.4.7
+  - pyrsistent=0.17.3
+  - pysocks=1.7.1
+  - python=3.9.7
+  - python-dateutil=2.8.2
+  - python_abi=3.9
+  - pytz=2021.1
+  - pyzmq=22.3.0
+  - readline=8.1
+  - requests=2.26.0
+  - requests-unixsocket=0.2.0
+  - scipy=1.7.1
+  - send2trash=1.8.0
+  - setuptools=58.0.4
+  - six=1.16.0
+  - sniffio=1.2.0
+  - sqlite=3.36.0
+  - statsmodels=0.12.2
+  - terminado=0.12.1
+  - testpath=0.5.0
+  - tk=8.6.11
+  - tornado=6.1
+  - traitlets=5.1.0
+  - tzdata=2021a
+  - urllib3=1.26.7
+  - wcwidth=0.2.5
+  - webencodings=0.5.1
+  - websocket-client=0.57.0
+  - wheel=0.37.0
+  - xz=5.2.5
+  - zeromq=4.3.4
+  - zipp=3.5.0
+  - zlib=1.2.11
+  - zstd=1.4.9
   - pip:
+    - appnope=0.1.2
+    - libgfortran=3.0.1
     - apyori==1.1.2
     - click==8.0.1
     - joblib==1.1.0
